--- a/arch/arm64/configs/oxygen_defconfig
+++ b/arch/arm64/configs/oxygen_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.125 Kernel Configuration
+# Linux/arm64 3.18.140 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -26,9 +26,7 @@ CONFIG_NEED_DMA_MAP_STATE=y
 CONFIG_NEED_SG_DMA_LENGTH=y
 CONFIG_ARM64_DMA_USE_IOMMU=y
 CONFIG_ARM64_DMA_IOMMU_ALIGNMENT=8
-#CONFIG_SMP=y
-## CONFIG_SDFAT_USE_FOR_VFAT is not set
-CONFIG_SDFAT_USE_FOR_EXFAT=y
+CONFIG_SMP=y
 CONFIG_SWIOTLB=y
 CONFIG_IOMMU_HELPER=y
 CONFIG_KERNEL_MODE_NEON=y
@@ -38,8 +36,6 @@ CONFIG_PGTABLE_LEVELS=3
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_EXTABLE_SORT=y
-CONFIG_STATE_NOTIFIER=y
-#CONFIG_DYNAMIC_STUNE_BOOST=y
 
 #
 # General setup
@@ -51,12 +47,10 @@ CONFIG_LOCALVERSION="-Hardrock_pie-caf"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
-#CONFIG_FORCE_FAST_CHARGE=y
 # CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_FHANDLE is not set
-
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
 CONFIG_HAVE_ARCH_AUDITSYSCALL=y
@@ -82,7 +76,7 @@ CONFIG_GENERIC_CLOCKEVENTS=y
 CONFIG_GENERIC_CLOCKEVENTS_BUILD=y
 CONFIG_ARCH_HAS_TICK_BROADCAST=y
 CONFIG_GENERIC_CLOCKEVENTS_BROADCAST=y
-#CONFIG_POWERSUSPEND=y
+
 #
 # Timers subsystem
 #
@@ -139,6 +133,7 @@ CONFIG_CPUSETS=y
 CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
+# CONFIG_CGROUP_SCHEDTUNE is not set
 CONFIG_MEMCG=y
 CONFIG_MEMCG_SWAP=y
 CONFIG_MEMCG_SWAP_ENABLED=y
@@ -160,7 +155,7 @@ CONFIG_NAMESPACES=y
 # CONFIG_PID_NS is not set
 CONFIG_NET_NS=y
 # CONFIG_SCHED_AUTOGROUP is not set
-# CONFIG_SCHED_TUNE is not set
+CONFIG_SCHED_TUNE=y
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
 CONFIG_BLK_DEV_INITRD=y
@@ -304,11 +299,25 @@ CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_FIFO=y
+CONFIG_IOSCHED_SIOPLUS=y
+CONFIG_IOSCHED_TRIPNDROID=y
+CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_MAPLE=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_BFQ is not set
-CONFIG_DEFAULT_NOOP=y
-CONFIG_DEFAULT_IOSCHED="noop"
+# CONFIG_DEFAULT_NOOP is not set
+# CONFIG_DEFAULT_FIOPS is not set
+# CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_FIFO is not set
+# CONFIG_DEFAULT_SIOPLUS is not set
+# CONFIG_DEFAULT_TRIPNDROID is not set
+CONFIG_DEFAULT_ZEN=y
+# CONFIG_DEFAULT_MAPLE is not set
+CONFIG_DEFAULT_IOSCHED="zen"
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
@@ -485,6 +494,7 @@ CONFIG_BINFMT_SCRIPT=y
 # CONFIG_BINFMT_MISC is not set
 CONFIG_COREDUMP=y
 CONFIG_COMPAT=y
+CONFIG_KEYS_COMPAT=y
 
 #
 # Power management options
@@ -510,7 +520,8 @@ CONFIG_PM_CLK=y
 # CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
 CONFIG_CPU_PM=y
 CONFIG_SUSPEND_TIME=y
-# CONFIG_DEDUCE_WAKEUP_REASONS is not set
+CONFIG_BOEFFLA_WL_BLOCKER=y
+CONFIG_PM_SYNC_BEFORE_SUSPEND=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM64_CPU_SUSPEND=y
 
@@ -540,24 +551,51 @@ CONFIG_CPU_FREQ_GOV_COMMON=y
 CONFIG_SCHED_FREQ_INPUT=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
-#CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
-#CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMANDX=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_SCHED is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ELECTRON_ADVANCE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE_PRO is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ZZMOOVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BARRY_ALLEN is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_HYPER is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_WAVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BIOSHOCK is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LIONFISH is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTMAX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_YANKACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVEX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMANDPLUS is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_DANCEDANCE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_DARKNESS is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_DARKNESSV5 is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ALUCARD is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_NIGHTMARE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CULTIVATION is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_DYNAMIC_INTERACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_RAGINGMOLASSES is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTMAX_EPS is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_IRONACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMANDX is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_ALUCARD=y
-CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
-CONFIG_CPU_FREQ_GOV_DARKNESS=y
-CONFIG_CPU_FREQ_GOV_DARKNESSV5=y
+CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
+CONFIG_CPU_FREQ_GOV_ONDEMANDX=y
+CONFIG_INTELLI_MAX_ACTIVE_FREQ=1512000
+CONFIG_INTELLI_MAX_INACTIVE_FREQ=1134000
+# CONFIG_CPUFREQ_LIMIT_MAX_FREQ is not set
+# CONFIG_CPUFREQ_DT is not set
 CONFIG_CPU_FREQ_GOV_ELECTRODEMAND=y
 CONFIG_CPU_FREQ_GOV_BARRY_ALLEN=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
@@ -567,7 +605,6 @@ CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_FREQ_GOV_HYPER=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE_PRO=y
 CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
-CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
 CONFIG_CPU_FREQ_GOV_LIONFISH=y
 CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
@@ -576,47 +613,20 @@ CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVEX=y
 CONFIG_CPU_FREQ_GOV_LIONHEARTH=y
 CONFIG_CPU_FREQ_GOV_DANCEDANCE=y
-CONFIG_CPU_FREQ_GOV_ELECTRON_ADVANCE=y
-CONFIG_CPU_FREQ_GOV_CULTIVATION=y
-CONFIG_CPU_FREQ_GOV_DYNAMIC_INTERACTIVE=y
-#CONFIG_CPU_FREQ_GOV_RAGINGMOLASSES=y
-CONFIG_CPU_FREQ_GOV_SMARTMAX_EPS=y
-#CONFIG_CPU_FREQ_GOV_SMARTMAX_EPS_ENRC2B=y
-CONFIG_CPU_FREQ_GOV_SMARTMAX_EPS=y
-CONFIG_CPU_FREQ_GOV_ONDEMANDX=y
-#CONFIG_MSM_HOTPLUG=y
-#CONFIG_AUTOSMP=y
-#CONFIG_INTELLI_PLUG=y
-#CONFIG_LAZYPLUG=y
-#CONFIG_THUNDERPLUG_CONTROL=y
-#CONFIG_ALUCARD_HOTPLUG=y
-#CONFIG_MAKO_HOTPLUG=y
-#CONFIG_CPU_FREQ_GOV_SCHED=y
-CONFIG_SCHED_TUNE=y
-CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
-CONFIG_FREQVAR_SCHEDTUNE=y 
+CONFIG_CPU_FREQ_GOV_ALUCARD=y
+CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
+CONFIG_CPU_FREQ_GOV_DARKNESS=y
+CONFIG_CPU_FREQ_GOV_DARKNESSV5=y
 CONFIG_CPU_FREQ_GOV_IRONACTIVE=y
-CONFIG_F2FS_FS=y
-CONFIG_F2FS_FS_SECURITY=y
-CONFIG_EXFAT_FS=y
-CONFIG_EXFAT_DISCARD=y
-#CONFIG_F2FS_FS=y
-CONFIG_F2FS_STAT_FS=y
-CONFIG_F2FS_FS_XATTR=y
-CONFIG_F2FS_FS_POSIX_ACL=y
-#CONFIG_F2FS_FS_SECURITY=y
-# CONFIG_F2FS_CHECK_FS is not set
-CONFIG_F2FS_FS_ENCRYPTION=y
-# CONFIG_EXFAT_DELAYED_SYNC is not set
-# CONFIG_EXFAT_KERNEL_DEBUG is not set
-# CONFIG_EXFAT_DEBUG_MSG is not set
-CONFIG_EXFAT_DEFAULT_CODEPAGE=437
-CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
-#
-# CPU frequency scaling drivers
-#
-# CONFIG_CPUFREQ_DT is not set
 # CONFIG_CPU_BOOST is not set
+CONFIG_CPU_FREQ_GOV_ELECTRON_ADVANCE=y
+# CONFIG_CPU_WAKE_BOOST is not set
+# CONFIG_CPU_FREQ_GOV_WAVE is not set
+CONFIG_CPU_FREQ_GOV_CULTIVATION=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX_EPS=y
+CONFIG_CPU_FREQ_GOV_DYNAMIC_INTERACTIVE=y
+# CONFIG_CPU_FREQ_GOV_RAGINGMOLASSES is not set
+CONFIG_FINGERPRINT_BOOST=y
 
 #
 # ARM CPU frequency scaling drivers
@@ -644,6 +654,8 @@ CONFIG_XFRM_IPCOMP=y
 CONFIG_NET_KEY=y
 # CONFIG_NET_KEY_MIGRATE is not set
 CONFIG_INET=y
+CONFIG_WIREGUARD=y
+# CONFIG_WIREGUARD_DEBUG is not set
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
 # CONFIG_IP_FIB_TRIE_STATS is not set
@@ -676,9 +688,26 @@ CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 # CONFIG_INET_UDP_DIAG is not set
 CONFIG_INET_DIAG_DESTROY=y
-# CONFIG_TCP_CONG_ADVANCED is not set
+CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
-CONFIG_DEFAULT_TCP_CONG="cubic"
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_HTCP=y
+# CONFIG_TCP_CONG_HSTCP is not set
+# CONFIG_TCP_CONG_HYBLA is not set
+# CONFIG_TCP_CONG_VEGAS is not set
+# CONFIG_TCP_CONG_SCALABLE is not set
+# CONFIG_TCP_CONG_LP is not set
+# CONFIG_TCP_CONG_VENO is not set
+# CONFIG_TCP_CONG_YEAH is not set
+# CONFIG_TCP_CONG_ILLINOIS is not set
+# CONFIG_TCP_CONG_DCTCP is not set
+# CONFIG_DEFAULT_BIC is not set
+# CONFIG_DEFAULT_CUBIC is not set
+# CONFIG_DEFAULT_HTCP is not set
+CONFIG_DEFAULT_WESTWOOD=y
+# CONFIG_DEFAULT_RENO is not set
+CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_ROUTER_PREF=y
@@ -1896,6 +1925,9 @@ CONFIG_TOUCHSCREEN_FT5X06=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
 # CONFIG_TOUCHSCREEN_GT9XX is not set
 CONFIG_TOUCHSCREEN_MAXIM_STI=y
+CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
+CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
+CONFIG_TOUCHSCREEN_PREVENT_SLEEP=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
@@ -1932,6 +1964,17 @@ CONFIG_INPUT_GPIO=y
 CONFIG_INPUT_FINGERPRINT=y
 CONFIG_FINGERPRINT_GOODIX_TA=y
 CONFIG_FINGERPRINT_FPC_TEE=y
+# CONFIG_BOSCH_DRIVER_LOG_FUNC is not set
+# CONFIG_SENSORS_SMI_ACC2X2 is not set
+# CONFIG_SENSORS_SMI_GYRO is not set
+# CONFIG_SENSORS_YAS537 is not set
+# CONFIG_SENSORS_BMM050 is not set
+# CONFIG_SENSORS_AKM09911 is not set
+# CONFIG_SENSORS_AKM09912 is not set
+# CONFIG_SENSORS_SMI_ACC420 is not set
+# CONFIG_SENSORS_SMI_ACC421 is not set
+# CONFIG_SENSORS_SMI_ACC422 is not set
+# CONFIG_SENSORS_SMI_ACC455 is not set
 
 #
 # Hardware I/O ports
@@ -1960,6 +2003,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_NOZOMI is not set
 # CONFIG_N_GSM is not set
 # CONFIG_TRACE_SINK is not set
+CONFIG_LDISC_AUTOLOAD=y
 # CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
 
@@ -2011,7 +2055,6 @@ CONFIG_DIAG_OVER_USB=y
 CONFIG_HW_RANDOM=y
 # CONFIG_HW_RANDOM_TIMERIOMEM is not set
 CONFIG_HW_RANDOM_MSM_LEGACY=y
-# CONFIG_R3964 is not set
 # CONFIG_APPLICOM is not set
 
 #
@@ -2682,7 +2725,6 @@ CONFIG_MSM_CSI31_HEADER=y
 CONFIG_MSM_CSIPHY=y
 CONFIG_MSM_CSID=y
 CONFIG_MSM_EEPROM=y
-# CONFIG_MSM_ISP_V1 is not set
 CONFIG_MSM_ISPIF=y
 # CONFIG_MSM_ISPIF_V1 is not set
 # CONFIG_MSM_ISPIF_V2 is not set
@@ -2699,8 +2741,6 @@ CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE=y
 CONFIG_MSMB_JPEG=y
 CONFIG_MSM_FD=y
 # CONFIG_MSM_JPEGDMA is not set
-CONFIG_MSM_SEC_CCI_TA_NAME="seccamdemo64"
-# CONFIG_MSM_SEC_CCI_DEBUG is not set
 # CONFIG_MSM_AIS is not set
 # CONFIG_TSPP is not set
 CONFIG_MSM_SDE_ROTATOR=y
@@ -2914,6 +2954,7 @@ CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
 # CONFIG_FB_MSM_MDSS_XLOG_DEBUG is not set
 # CONFIG_FB_MSM_MDSS_FRC_DEBUG is not set
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_FB_SSD1307 is not set
 # CONFIG_BACKLIGHT_LCD_SUPPORT is not set
 # CONFIG_ADF is not set
@@ -3128,6 +3169,7 @@ CONFIG_SND_SOC_WCD_MBHC=y
 # CONFIG_SND_SOC_TPA6130A2 is not set
 CONFIG_SND_SOC_MSM_STUB=y
 CONFIG_SND_SOC_MSM_HDMI_DBA_CODEC_RX=y
+CONFIG_SOUND_CONTROL=y
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
 
@@ -3967,6 +4009,7 @@ CONFIG_MSM_KERNEL_PROTECT_MPU=y
 # CONFIG_QCOM_EARLY_RANDOM is not set
 # CONFIG_WCD_DSP_GLINK is not set
 CONFIG_SERIAL_NUM=y
+# CONFIG_EXT_ANC is not set
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 # CONFIG_SOC_TI is not set
 CONFIG_PM_DEVFREQ=y
@@ -3990,6 +4033,7 @@ CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
 CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON=y
 CONFIG_DEVFREQ_GOV_SPDM_HYP=y
 CONFIG_DEVFREQ_GOV_MEMLAT=y
+# CONFIG_ADRENO_IDLER is not set
 
 #
 # DEVFREQ Drivers
@@ -4099,6 +4143,7 @@ CONFIG_EXT4_FS=y
 # CONFIG_EXT4_FS_POSIX_ACL is not set
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_EXT4_ENCRYPTION=y
+CONFIG_EXT4_FS_ENCRYPTION=y
 # CONFIG_EXT4_DEBUG is not set
 CONFIG_JBD=y
 # CONFIG_JBD_DEBUG is not set
@@ -4120,13 +4165,6 @@ CONFIG_DNOTIFY=y
 CONFIG_INOTIFY_USER=y
 # CONFIG_FANOTIFY is not set
 CONFIG_QUOTA=y
-#ONFIG_QUOTA=y
-CONFIG_QUOTA_NETLINK_INTERFACE=y
-CONFIG_PRINT_QUOTA_WARNING=y
-CONFIG_QUOTA_TREE=y
-CONFIG_QFMT_V2=y
-CONFIG_QUOTACTL=y
-
 # CONFIG_QUOTA_NETLINK_INTERFACE is not set
 # CONFIG_PRINT_QUOTA_WARNING is not set
 # CONFIG_QUOTA_DEBUG is not set
@@ -4158,12 +4196,12 @@ CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 CONFIG_EXFAT_FS=y
-CONFIG_EXFAT_SUPPORT_STLOG=y
-CONFIG_NTFS_FS=y
-CONFIG_NTFS_DEBUG=y
-CONFIG_NTFS_RW=y
-
-
+CONFIG_EXFAT_DISCARD=y
+# CONFIG_EXFAT_DELAYED_SYNC is not set
+# CONFIG_EXFAT_KERNEL_DEBUG is not set
+# CONFIG_EXFAT_DEBUG_MSG is not set
+CONFIG_EXFAT_DEFAULT_CODEPAGE=437
+CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 # CONFIG_NTFS_FS is not set
 
 #
@@ -4279,6 +4317,7 @@ CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=y
 # CONFIG_DLM is not set
 # CONFIG_FILE_TABLE_DEBUG is not set
+# CONFIG_DYNAMIC_FSYNC is not set
 # CONFIG_VIRTUALIZATION is not set
 
 #
@@ -4538,7 +4577,7 @@ CONFIG_CRYPTO_SEQIV=y
 #
 CONFIG_CRYPTO_CBC=y
 CONFIG_CRYPTO_CTR=y
-# CONFIG_CRYPTO_CTS is not set
+CONFIG_CRYPTO_CTS=y
 CONFIG_CRYPTO_ECB=y
 # CONFIG_CRYPTO_LRW is not set
 # CONFIG_CRYPTO_PCBC is not set
@@ -4701,47 +4740,3 @@ CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
 CONFIG_BOOT_INFO=y
-#
-# IO Scheduler
-#
-CONFIG_IOSCHED_NOOP=y
-# CONFIG_IOSCHED_TEST is not set
-CONFIG_IOSCHED_DEADLINE=y
-CONFIG_IOSCHED_CFQ=y
-CONFIG_IOSCHED_SIO=y
-CONFIG_IOSCHED_FIOPS=y
-CONFIG_IOSCHED_FIFO=y
-CONFIG_IOSCHED_SIOPLUS=y
-CONFIG_IOSCHED_TRIPNDROID=y
-CONFIG_IOSCHED_ZEN=y
-CONFIG_IOSCHED_MAPLE=y
-# CONFIG_DEFAULT_DEADLINE is not set
-# CONFIG_DEFAULT_FIOPS is not set
-# CONFIG_DEFAULT_CFQ is not set
-# CONFIG_DEFAULT_NOOP is not set
-# CONFIG_DEFAULT_SIO is not set
-# CONFIG_DEFAULT_FIFO is not set
-# CONFIG_DEFAULT_SIOPLUS is not set
-# CONFIG_DEFAULT_TRIPNDROID is not set
-CONFIG_DEFAULT_ZEN=y
-CONFIG_DEFAULT_IOSCHED="maple"
-CONFIG_ASN1=y
-CONFIG_UNINLINE_SPIN_UNLOCK=y
-CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
-CONFIG_MUTEX_SPIN_ON_OWNER=y
-CONFIG_RWSEM_SPIN_ON_OWNER=y
-CONFIG_FREEZER=y
-# KCAL SUPPORT
-CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
-CONFIG_BOEFFLA_WL_BLOCKER=y
-CONFIG_SOUND_CONTROL=y
-CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
-CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
-CONFIG_TCP_CONG_ADVANCED=y
-CONFIG_TCP_CONG_WESTWOOD=y
-CONFIG_DEFAULT_WESTWOOD=y
-CONFIG_DEFAULT_TCP_CONG="westwood"
-CONFIG_GPU_VOLTAGE=y
-CONFIG_VOLTAGE_CONTROL=y
-CONFIG_SCHED=y
-CONFIG_FINGERPRINT_BOOST=y
